# april-tags-jni

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  settings.gradle
cmake/: sources.txt
lib/: build.gradle
native/: CMakeLists.txt  apriltagd.lib  build.gradle
native/src/main/java/com/squedgy/frc/team2077/april/tags/: AprilTag.java  ByteImage.java  TagFamily.java
native/src/main/java/com/squedgy/frc/team2077/april/tags/detection/: Detection.java  DetectionResult.java  Detector.java
native/src/test/java/com/squedgy/frc/team2077/april/tag/: Detect.java
src/main/java/com/squedgy/frc/team2077/april/tags/: ByteImage.java
src/main/java/com/squedgy/frc/team2077/april/tags/detection/: Detection.java  DetectionResult.java  Detector.java  Point.java
src/test/java/com/squedgy/frc/team2077/april/tag/: Detect.java
